[package]
name = "rnfc"
version = "0.1.0"
authors = ["Lee Mracek <lee.mracek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.66"
failure = "0.1.6"
bit-vec = "0.6.1"
enum-primitive-derive = "^0.1"
num-traits = "^0.1"

[build-dependencies]
bindgen = "0.52.0"
